# opengl-project

./: CMakeLists.txt
framework/include/: camera.hpp  mesh.hpp
framework/src/: camera.cpp  mesh.cpp  texture.cpp
objects/: Windows.mtl  exterior.mtl  interior.mtl  interior_preview.mtl  screen.mtl
zapocet_456657/: Application.cpp  Application.hpp  CMakeLists.txt  main.cpp
zapocet_456657/shaders/: exterior.frag  exterior.vert  lights.frag  lights.vert  main.frag  main.vert  main.vert.anpFma  skybox.frag  skybox.vert
